frontend/src/components/SignUp.module.css
/* SignUp.css */

html, body {
  margin: 0;      /* Remove default margin */
  padding: 0;     /* Remove default padding */
  width: 100%;    /* Ensure full width */
  height: 100%;   /* Ensure full height */
  overflow-x: hidden; /* Prevent horizontal scrolling */
}

/* Define the font */
@font-face {
  font-family: 'Helvetica';
  src: url('../fonts/helvetica.woff') format('truetype');
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: 'Helvetica';
}

.sign-up-main-container {
  background-color: #4d55a5;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sign-up-left-icon {
  width: 80px;
  height: auto;
  margin-right: 30px;
  position: absolute;
  top: 30px;
  right: 120px;
}

.sign-up-account-right {
  width: 70px;
  height: auto;
  position: absolute;
  top: 30px;
  right: 30px;
  margin-right: 30px;
  cursor: pointer;
}

.sign-up-logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  
}

.sign-up-center-logo {
  height: auto;
  width: 400px;
  margin-top: 70px;
}

/* Image with 3 people */
.sign-up-background-image {
  right: 30px;
  position: absolute;
  bottom: 55px;
  right: 20px;
  width: 600px;
  height: auto;
  opacity: 0.3;
}

/* White box containing sign in */
.sign-up-wrapper {
  position: absolute;
  width: 500px;
  height: 600px;
  background-color: #fff;
  border-radius: 20px;
  top: 200px;
}

.sign-up-form-box-login {
  position: absolute;
  justify-content: flex;
  flex-direction: column;
  left: 40px;
  align-items: center;
}

/* Sign up text in middle of box */
.sign-up-text {
  color:#4d55a5;
  position: absolute;
  font-size: 55px !important;
  white-space: nowrap;
  bottom: -50px;
  font-family: 'Helvetica-Bold';
  left: 99px;

}

.sign-up-input-box {
  position: relative;
  width: 320%;
  height: 50px;
}

.sign-up-email-text{
  font-family: 'Helvetica-Bold';
  color: #4d55a5;
  font-weight: bold;
  position: absolute;
  bottom: -105px;
}

.sign-up-email-box {
  background-color: #ccc;
  border: 1px solid rgba(0, 0, 0, 0.5);
  width: 410px;
  height: auto;
  position: absolute;
  bottom: -155px;
  padding: 10px;
  font-size: large;
  font-family: 'Helvetica';
}

.sign-up-password-text {
  font-family: 'Helvetica-Bold';
  color: #4d55a5;
  font-weight: bold;
  position: absolute;
  bottom: -135px;
}

.sign-up-password-box {
  background-color: #ccc;
  border: 1px solid rgba(0, 0, 0, 0.5);
  width: 410px;
  height: auto;
  position: absolute;
  bottom: -185px;
  padding: 10px;
  font-size: large;
  font-family: 'Helvetica';
}

.sign-up-password-confirm-text {
  font-family: 'Helvetica-Bold';
  color: #4d55a5;
  font-weight: bold;
  position: absolute;
  bottom: -220px;
  white-space: nowrap;
}

.sign-up-password-confirm{
  background-color: #ccc;
  border: 1px solid rgba(0, 0, 0, 0.5);
  width: 410px;
  height: auto;
  position: absolute;
  padding: 10px;
  font-size: large;
  bottom: -275px;
  font-family: 'Helvetica';
}

.sign-up-submit-button {
  border-radius: 20px;
  border: none;
  width: 430px;
  height: 37px;
  background-color: #93c83d;
  font-weight: bold;
  font-size: larger;
  position: absolute;
  bottom: -355px;
  cursor: pointer;
}


.sign-in-link {
  position: absolute;
  right: -295px;
  bottom: -392px;
  color: #93c83d;
  text-decoration: none;
  font-size: small;
  white-space: nowrap;
}

.small-sign-in-text {
  position: absolute;
  font-size: small;
  font-family: 'Helvetica', 'Arial', sans-serif;
  bottom: -405px;
  right: -250px;
}

/*Error message will be red*/
.error {
  color: red;
  bottom: -300px;
  
}

